# MTE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  __init__.py  gen_c_model.py
assets/: yolov10t.tflite
dev_projects/: LICENSE  main.c
dev_projects/cortex-m7/targets/gd32h759i/: CMakeLists.txt  board.cfg  startup_gd32h7xx.S
dev_projects/cortex-m7/targets/gd32h759i/lib/: timer.c  timer.h  uart.c  uart.h
dev_projects/cortex-m7/targets/gd32h759i/lib/inc/: gd32h7xx.h
examples/: custom_op.py
examples/custom_op_c_files/: avg_pool2d.h  max_pool2d.h
mte_cg/: __init__.py  base.py  gen_c_code.py  gen_c_model.py  mte_base.py  run_tflite.py
mte_cg/examples/: custom_op.py
mte_cg/examples/custom_op_c_files/: avg_pool2d.c
mte_cg/graph_optimize/: __init__.py  fuse_ops.py  optimize_ops.py  utils.py
mte_cg/memory/: __init__.py  memory_utils.py
mte_cg/op_parse/: __init__.py  conv2d.py  interpolate.py  math.py  pad.py  parse_tools.py  pool2d.py  tensor_ops.py
mte_core/inc/: mat_mul_kernels.h  mte_core.h  mte_crs.h  mte_ops.h  mte_tools.h  useful_defines.h
mte_core/src/: mat_mul_kernels.c
mte_core/src/conv/: conv2d_input_3_s8.c  conv2d_s8.c
mte_core/src/dw_conv/: dw_conv2d_1x5_stride_1_1_dilate_1_1_s8.c  dw_conv2d_3x3_stride_1_1_dilate_1_1_s8.c  dw_conv2d_3x3_stride_2_2_dilate_1_1_s8.c  dw_conv2d_5x1_stride_1_1_dilate_1_1_s8.c  dw_conv2d_5x5_stride_1_1_dilate_1_1_s8.c  dw_conv2d_5x5_stride_2_2_dilate_1_1_s8.c  dw_conv2d_7x7_stride_1_1_dilate_1_1_s8.c
mte_core/src/interpolate/: resize_nearest.c
mte_core/src/math/: add.c  ele_functions.c  mul.c  softmax.c
mte_core/src/pool/: max_pool2d.c
mte_core/src/tensor_ops/: concat.c  gather.c  pack.c  transpose.c
